<resources>
    <string name="app_name">Getsy_v2</string>
    <string name="main_log_in_button">Log in</string>
    <string name="main_getsy_title">Getsy</string>
    <string name="main_sign_up_button">Sign up</string>
    <string name="child_log_in_button">Log in</string>
    <string name="child_user_name_prompt">Enter Username</string>
    <string name="child_password_prompt">Enter Password</string>
    <string name="landing_main_menu">Main Menu</string>
    <string name="search_button">Search</string>
    <string name="order_history_button">Order History</string>
    <string name="admin_button">Admin</string>
    <string name="user">USER</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_usernameInput">Enter Username</string>
    <string name="sign_up_password_input">Enter Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_confirm_password_input">Confirm Password</string>
    <string name="search_for_items_title">Search for Items</string>
    <string name="search_input">Search</string>
    <string name="searchButton_searchActivity">Search</string>
    <string name="buy_button">Buy</string>
    <string name="items_info_example">Price: $0\nIn Stock: 0\nDetails:</string>
    <string name="item_name_example">Example Item</string>
</resources>