<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <AutoCompleteTextView
        android:id="@+id/searchItemInput"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:hint="@string/search_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/search_for_items_title"
        android:textSize="30sp"
        android:fontFamily="@font/calistoga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/searchButton_SearchActivity"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/searchButton_searchActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchItemInput"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:fontFamily="@font/calistoga"
        android:gravity="center_horizontal"
        android:text="@string/item_name_example"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton_SearchActivity"
        app:layout_constraintVertical_bias="0.136"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/itemInformation"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/items_info_example"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintVertical_bias="0.29"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/buy_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>