<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <TextView
        android:id="@+id/landingMainMenu"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:fontFamily="@font/calistoga"
        android:gravity="center"
        android:text="@string/landing_main_menu"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:text="@string/search_button"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingMainMenu"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/orderHistoryButton"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:text="@string/order_history_button"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:text="@string/admin_button"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderHistoryButton"
        app:layout_constraintVertical_bias="0.221"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>